plugins {
    id 'java-library'
}

repositories {
    jcenter()
}

compileJava {
    options.compilerArgs = [
        '--add-exports', 'jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED',
        '--add-exports', 'jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED',
    ]
}

dependencies {
    testImplementation(
        'org.junit.jupiter:junit-jupiter-api:5.6.0',
        'org.hamcrest:hamcrest:2.2',
    )

    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.6.0'
}

test {
    useJUnitPlatform()
}

sourceCompatibility = JavaVersion.VERSION_13
targetCompatibility = JavaVersion.VERSION_13